--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
         "prettier/react"
     ],
     "plugins": [
-        "prettier"
+        "prettier",
+        "react-hooks"
     ],
     "settings": {
         "import/resolver": {
@@ -54,6 +55,8 @@
         "react/forbid-prop-types": "off",
         "react/require-default-props": "off",
         "react/default-props-match-prop-types": "off",
-        "react/no-unused-prop-types": "off"
+        "react/no-unused-prop-types": "off",
+        "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+        "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
     }
 }
